# TestPyPack

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: pip.conf
src/iitech_jfrog_demo/: __init__.py  cli.py
tests/: test_cli.py
