[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iitech-jfrog-multipypi-demo"
version = "0.0.0"
description = "Demo package for publishing to JFrog Artifactory and installing via a Virtual PyPI repository."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex", email = "alex@iitech.online" }]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32",
  "pydantic>=2.6",
  "python-dateutil>=2.8",
  "rich>=13.7",
]

[project.scripts]
iitech-jfrog-demo = "iitech_jfrog_demo.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "build>=1.2",
  "twine>=5.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
